# Proiect_Calitate_Aer

./: .coveragerc  .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  GITHUB_SETUP_COMPLETE.md  LICENSE  Makefile  QUICKSTART.md  README.md  ROADMAP.md  SECURITY.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.cfg
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml  tests.yml
docs/: EXPLICATIE_COD_ANTONIO.md  EXPLICATIE_COD_RADU.md  EXPLICATIE_COD_SILVIU.md  RADU_PRESENTATION_GUIDE.md  TECHNICAL.md  USAGE.md
models/: pm25_model_metrics.json
presentation/: CONVERSION_GUIDE.md  PROJECT_PRESENTATION.md  Prezentare_Calitate_Aer.pptx  convert_to_pptx.py
src/: __init__.py  app.py  data_collection.py  model.py
tests/: __init__.py  test_data_collection.py  test_integration.py  test_model.py
